298. Storing & Fetching Data with SQLite - 299. Adding a Location Input & The *location* Package - 300. Fetching the User Coordinates - 301. Displaying a Static Map Snapshot - 302. Rendering a Dynamic Map (via Google Maps) - 303. Allowing Users to Pick a Location on the Map - 304. Storing the Location in SQLite

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="picandplace"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBTZ4lTpMLPfb_zhFkv7IWlsRngzmMeqyE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
